--- a/backendapp/Dockerfile
+++ b/backendapp/Dockerfile
@@ -5,8 +5,9 @@ FROM maven:3.9.6-eclipse-temurin-17
 WORKDIR /app
 
 # Copy pom.xml and source files
-COPY pom.xml .
-COPY src ./src
+
+COPY ../pom.xml .
+COPY ../src ./src
 
 # Build the Spring Boot app
 RUN mvn clean package -DskipTests
