--- a/backendapp/Dockerfile
+++ b/backendapp/Dockerfile
@@ -1,19 +1,29 @@
-# ✅ Use a working Maven + Java 17 image
-FROM maven:3.9.6-eclipse-temurin-17
+# Use Maven with Java 17 pre-installed
+FROM maven:3.9.6-eclipse-temurin-17 AS build
 
-# Set working directory
+# Set the working directory inside the container
 WORKDIR /app
 
-# Copy pom.xml and source files
+# Copy only the pom.xml and download dependencies (cache optimization)
+COPY pom.xml .
+RUN mvn dependency:go-offline
 
-COPY ../pom.xml .
-COPY ../src ./src
+# Now copy the entire project source
+COPY src ./src
 
-# Build the Spring Boot app
+# Build the Spring Boot app and skip tests
 RUN mvn clean package -DskipTests
 
-# Expose port (Render will automatically use $PORT)
+# ---- Run Stage ----
+FROM eclipse-temurin:17-jdk
+
+WORKDIR /app
+
+# Copy the built jar from the previous stage
+COPY --from=build /app/target/*.jar app.jar
+
+# Expose the port your app runs on
 EXPOSE 8080
 
-# Run the generated jar file
-CMD ["sh", "-c", "java -jar target/*.jar"]
+# Start the Spring Boot application
+CMD ["java", "-jar", "app.jar"]
